# qitty

./: Cargo.toml  README.md  generate-dictionary.sh  index.html  qat-notes.md  worker.js
.github/workflows/: pages.yml
benches/: example.rs  qbenchmark.rs
src/: constraint_solver.rs  dict.rs  examples.rs  lib.rs  parser.rs
