[profile.release]
debug = true

[package]
name = "qitty"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.3"
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
nom = "7.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.3", features = ["flamegraph"] }
criterion-macro = "0.3"

[[bench]]
name = "example"
harness = false
